# deckr-driver-mirabox

./: README.md  pyproject.toml
src/deckr/drivers/mirabox/: __init__.py  _device.py  _discovery.py  _factory.py  _protocol.py  _transport.py
src/deckr/drivers/mirabox/layouts/: __init__.py  _data.py  _evaluator.py
src/deckr/drivers/mirabox/layouts/built-in/: device-293n3.yml  device-293n4.yml  device-akp153.yml  device-msd-two.yml
src/deckr_mirabox_setup/: __init__.py  __main__.py  cli.py  connect_device.py  control_render.py  device_session.py  scan.py  slot_render.py  wizard.py
tests/: test_layout_model.py  test_mirabox_device_contract.py  test_nats_surface.py
